# CompMajor

./: CMakeLists.txt  CompMajor.sln  Parameterization.filters  Parameterization.vcxproj  Parameterization_cmd.vcxproj  README.md
Matlab/: ComputeConeHessian.m  ComputeConeHessianLoop.m  EnergyClassSymDirichlet.m  NewtonMex.mexw64  ParamGui.m  ParameterizerClass.m  compileMex.m  multiplyVec2x2.m  transposeVec2x2.m
Matlab/+gui/: autogui.m  intslider.m  label.m
Matlab/@TriangleMesh/: ComputeTutteParameterization.m  TriangleMesh.m  centralize.m  computeAdjacencyMatrix.m  computeE.m  computeFaceNormals.m  computeGradientMatrix.m  computeSurfaceArea.m  computeSurfaceGradientMatrix.m  computeTriangleAreas.m  computeTriangleEdgeLengths.m  computeV2V.m  constructFromObj.m  copy.m  draw.m  findBoundaries.m  findOrientedBoundariesMatlab.m  getFramePerFace.m  init.m  objReader.m  objReaderMex.mexw64  offReader.m
Matlab/NewtonAutodiffMex/: computeHessianMex.cpp
Matlab/objReader/: objReader.cpp  tiny_obj_loader.cpp  tiny_obj_loader.h
libigl/include/igl/viewer/: OpenGL_state.cpp  TextRenderer.cpp  Viewer.cpp  Viewer.h  ViewerCore.cpp  ViewerCore.h  ViewerData.cpp  ViewerData.h
src/: EigenTypes.h  Energy.cpp  Energy.h  EnergySymDir.cpp  EnergySymDir.h  Newton.cpp  Newton.h  PardisoSolver.cpp  PardisoSolver.h  Position.h  Solver.cpp  Solver.h  SolverPlugin.cpp  SolverPlugin.h  SolverWrapper.cpp  SolverWrapper.h  Utils.h  main.cpp  main_cmd.cpp
